# apkfoundry

./: .editorconfig  .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  README.rst  abuildd-agentd  abuildd-build  abuildd-irc  abuildd.sql  af-req-root.c  af-rm-container.c  af-rmtemp.c  setup.cfg  setup.py
abuildd/: __init__.py  builders.py  config.py  connections.py  db.py  enqueue.py  events.py  mqtt.py  repository.py  tasks.py  utility.py  webhook.py
apkfoundry/: __init__.py  _log.py  _root.py  _rootfs.py  _sudo.py  _util.py  agent.py  build.py  cgi.py  chroot.py  container.py  database.py  digraph.py  dispatch.py  gitlab.py  inbound.py  irc.py  objects.py  recv.py  root.py  socket.py
cgi/: index.py  style.css  webhook.py
conf/: agent.ini  connections.ini  database.ini  enqueue.ini  irc.ini  mosquitto-acl  projects.ini  repo.ini  web.ini
doc/: mosquitto.rst  mqtt.rst  quickstart.rst  webhook.rst
docs/: APKBUILD.rst  TODO.rst  abuild.conf  build  build-script  build-script.sh  commits.rst  config-project.ini  configuration.rst  design.rst  gitlab-ci-config.yaml  gitlab-ci.rst  gitlab-runner-config.toml  install.rst  mosquitto-acl.example  mosquitto.rst  mqtt.rst  news.rst  protocol.rst  quickstart.rst  todo.rst
etc/: config-global.ini
libexec/: af-arch  af-changes  af-deps  af-dispatchd  af-functions  af-maintainer  af-origins  af-resign  af-rootd  af-worker  checkapk  common  gl-cleanup  gl-config  gl-run  rebuild-apkindex  resignapk
share/: schema.sql
src/: MANIFEST.in  af-rm-container.c  af-su.c  af-sudo.c  mkweb.sh  pylintrc  setup.py
(+23 files in other folders)
