[metadata]
name = apkfoundry
version = 0.1
url = "https://code.foxkit.us/sroracle/apkfoundry"
author = Max Rees
author_email = maxcrees@me.com
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: Build Tools
license = GPL-2.0-only AND MIT
license_files =
  LICENSE
  LICENSE.MIT
description = APK build orchestrator and distribution builder
long_description = file:README.rst

[options]
zip_safe = False
python_requires = >=3.6
include_package_data = True
packages = apkfoundry
